@@ -1,9 +1,16 @@
+11-28-2024
+- update changelog
+- waybar service will now only attempt to execute on hyprland if waybar enabled
+- polybar will also only activate on i3 if it is enabled
+
+
 11-26-2024
 - Fixed nasty bug with the i3-hyprland-windows
   - Now a systemd service
 	- removed unncessary while loop
 	- throw systemd output into the void instead of spamming the journal
 - proper polybar integration with systemd
+- finally make use of the waybar service instead of just spawning it in the background like a dum dum
 
 
 11-25-2024
